# jar-of-dirt

./: .gitignore  README.md
ai/: README.md
python/dirty-poetry/: README.md  pyproject.toml
python/tdd-api/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
python/tdd-api/migrations/: env.py
python/tdd-api/migrations/versions/: 0b336e849639_seasonal_event.py  188ec3f73bf3_product_table.py  22fba9449c89_product_type_table.py  2bc161e411cb_productline_attributevalue_table.py  34edfa4169c6_attribute_table.py  3c654d9dc4fe_category_unique.py  3dc822268cba_initial.py  5414c60cc74a_product_line_table.py  602189efb662_category_nullable.py  71808da2e409_attribute_value_table.py  733fa7edac1d_product_producttype_table.py  777d8d172704_category_length_constraints.py  8bbf47d76013_category_foreign_key.py  b14c99fb4d1f_product_image_table.py  d8d5eba3bc45_category_columns.py  f18fd962b862_init.py
python/tdd-api/scripts/: db-setup.sh
python/tdd-api/tdd_api/: category_utils.py  db_connection.py  main.py  models.py
python/tdd-api/tdd_api/routes/: category_routes.py
python/tdd-api/tdd_api/schemas/: category_schema.py
python/tdd-api/tests/: conftest.py  fixtures.py
python/tdd-api/tests/factories/: models_factory.py
python/tdd-api/tests/integration/: conftest.py  test_integration_category.py
python/tdd-api/tests/models/: conftest.py  fixtures.py  test_attribute.py  test_attribute_value.py  test_category.py  test_new.py  test_product.py  test_product_producttype.py  test_product_type.py  test_productimage.py  test_productline.py  (+2 more)
(+597 files in other folders)
