[tool.poetry]
name = "dirty-poetry"
version = "0.1.0"
description = ""
authors = ["sarincasm <eelsweb@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
